# container-pool

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  claude.yml  publish.yml
src/container_pool/: __init__.py  _backend.py  _container.py  _exceptions.py  _pool.py  _retry.py  _tracker.py  _types.py
src/container_pool/backends/: __init__.py  openai.py
tests/: conftest.py  test_container.py  test_pool.py  test_retry.py  test_tracker.py
tests/backends/: test_openai_backend.py
