[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "container-pool"
version = "0.1.0"
description = "Provider-agnostic async container pool with expiry recovery and per-request file tracking"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []
keywords = ["container", "pool", "openai", "code-interpreter", "async", "asyncio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "build",
    "twine",
]

[project.urls]
Repository = "https://github.com/aayushgzip/container-pool"
Issues = "https://github.com/aayushgzip/container-pool/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/container_pool"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
